--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,17 +42,19 @@ requests = "^2.28.1"
 responses = "^0.22.0"
 scikit-learn = "^1.1.3"
 setuptools = "^65.6.3"
-tensorflow = { version = "2.10.0", platform = "linux" }
+tensorflow = { version = "2.10.0", markers = "sys_platform !='darwin'" }
 tensorflow-macos = { version = "^2.10.0", platform = "darwin" }
 lightgbm = "3.3.2"
 urllib3 = "^1.26.13"
 wrapt = "^1.14.1"
 xgboost = "^1.7.1"
 pytest = "^7.2.0"
-torch = [{ version = "^1.13.0", markers = "sys_platform !='darwin'" },
-    { version = "1.12.1", markers = "sys_platform =='darwin'" }]
-torchray = [{ version = "^1.0.0.2", markers = "sys_platform !='darwin'" },
-    { version = "1.0.0.1", markers = "sys_platform =='darwin'" }]
+torch = [
+    { version = "^1.13.0", markers = "sys_platform =='linux'" },
+    { version = "1.12.1", markers = "sys_platform !='linux'" }]
+torchray = [
+    { version = "^1.0.0.2", markers = "sys_platform =='linux'" },
+    { version = "1.0.0.1", markers = "sys_platform !='linux'" }]
 
 [build-system]
 requires = ["poetry-core"]
