--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,8 @@ requests = "^2.28.1"
 responses = "^0.22.0"
 scikit-learn = "^1.1.3"
 setuptools = "^65.6.3"
-tensorflow = { version = "2.10.0", markers = "sys_platform !='darwin'" }
-tensorflow-macos = { version = "^2.10.0", platform = "darwin" }
+tensorflow = { version = "2.10.0", markers = "platform_machine=='x86_64'" }
+tensorflow-macos = { version = "^2.10.0", markers = "platform_machine!='x86_64' and sys_platform=='darwin'" }
 lightgbm = "3.3.2"
 urllib3 = "^1.26.13"
 wrapt = "^1.14.1"
