--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -46,12 +46,21 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'poetry'
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
       - name: Run image
         uses: abatilo/actions-poetry@v2
-      - name: Run Tests
+      - name: Install deps
+        run: |
+          poetry install
+      - name: Activate poetry env
+        run: |
+          echo "========== [ env activation ]==============
+          echo python${{matrix.python-version}}
+          poetry env use python${{matrix.python-version}}
+      - name: Run tests
         run: |
           poetry install
           poetry env use python${{matrix.python-version}}
