--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
+          cache: "poetry"
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
