--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_AUTOMATION }}
           submodules: "recursive"
-      - name: Setup Poetry
-        uses: abatilo/actions-poetry@v2
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -52,14 +52,15 @@ jobs:
       - name: Check for macos and install libomp for Boosting libraries to work
         if: startsWith(matrix.os, 'macOS')
         run: brew install libomp
-      - name: Install deps
-        run: |
-          poetry install
       - name: Activate poetry env
         run: |
           echo "========== [ env activation ]==============
           echo python${{matrix.python-version}}
           poetry env use python${{matrix.python-version}}
+      - name: Install deps
+        run: |
+          poetry install
+
       - name: Run tests
         run: |
           poetry install
