--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -54,7 +54,7 @@ jobs:
         run: brew install libomp
       - name: Activate poetry env
         run: |
-          echo "========== [ env activation ]==============
+          echo "========== [ env activation ]=============="
           echo python${{matrix.python-version}}
           poetry env use python${{matrix.python-version}}
       - name: Install deps
