--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -25,7 +25,7 @@ RUN wget https://github.com/bazelbuild/bazelisk/releases/download/v1.12.0/bazeli
     chmod +x /usr/local/bin/bazelisk
 
 RUN git clone -b v0.26.0 https://github.com/tensorflow/io.git
-RUN python -m pip install tensorflow==2.10.0rc0
+RUN python3 -m pip install tensorflow==2.10.0rc0
 RUN cd io && bazelisk && python tools/build/configure.py
 RUN cd io && bazelisk build //tensorflow_io/... //tensorflow_io_gcs_filesystem/...
 RUN cd io && \
