--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -26,7 +26,7 @@ RUN wget https://github.com/bazelbuild/bazelisk/releases/download/v1.12.0/bazeli
 
 RUN git clone -b v0.26.0 https://github.com/tensorflow/io.git
 RUN python3 -m pip install tensorflow==2.10.0rc0
-RUN cd io && bazelisk && python tools/build/configure.py
+RUN cd io && bazelisk && python3 tools/build/configure.py
 RUN cd io && bazelisk build //tensorflow_io/... //tensorflow_io_gcs_filesystem/...
 RUN cd io && \
     python3 setup.py --data bazel-bin -q bdist_wheel --project tensorflow_io_gcs_filesystem && \
