--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,35 +13,19 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get install -y python3.9-dev
-RUN apt-get install -y python3.9-venv
+
+RUN apt-get install -y python3.10-dev
+RUN apt-get install -y python3.10-venv
 RUN apt-get install -y python3-pip
-RUN apt-get update && apt-get install wget
-RUN apt-get install -y git
-
-RUN wget https://github.com/bazelbuild/bazelisk/releases/download/v1.12.0/bazelisk-linux-arm64 -O /usr/local/bin/bazelisk && \
-    chmod +x /usr/local/bin/bazelisk
-
-RUN git clone -b v0.26.0 https://github.com/tensorflow/io.git
-RUN python3 -m pip install tensorflow==2.10.0rc0
-RUN cd io && bazelisk && python3 tools/build/configure.py
-RUN cd io && bazelisk build //tensorflow_io/... //tensorflow_io_gcs_filesystem/...
-RUN cd io && \
-    python3 setup.py --data bazel-bin -q bdist_wheel --project tensorflow_io_gcs_filesystem && \
-    python3 setup.py --data bazel-bin -q bdist_wheel && \
-    python3 -m pip install dist/* --force-reinstall
-RUN python3 -m pip install
 # install dependencies
 ENV  POETRY_VERSION=1.2.2
 RUN pip install "poetry==$POETRY_VERSION"
-RUN python3.9 -m venv /venv
+RUN python3 -m venv /venv
 
 COPY pyproject.toml poetry.lock ./
 
 COPY . .
-RUN . /venv/bin/activate ; poetry env use python3.9; poetry install
+RUN . /venv/bin/activate && poetry install
 #########
 # FINAL # separated to reduce final size
 #########
@@ -50,11 +34,9 @@ FROM ubuntu:22.04
 # create the app user
 RUN addgroup --system app && adduser --system app --ingroup app
 RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get install -y python3.9 python3.9-dev
+RUN apt-get install -y python3.10 python3.10-dev
 RUN apt-get install -y python3-pip
-RUN apt-get install -y python3.9-venv
+RUN apt-get install -y python3.10-venv
 RUN apt-get install -y build-essential
 RUN apt-get install -y  libc6-dev libc6 libssl-dev zlib1g-dev curl gcc-9
 RUN apt-get install -y libc-bin
