--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,19 +13,21 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-
-RUN apt-get install -y python3.10-dev
-RUN apt-get install -y python3.10-venv
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN apt-get install -y python3.9-dev
+RUN apt-get install -y python3.9-venv
 RUN apt-get install -y python3-pip
+
 # install dependencies
 ENV  POETRY_VERSION=1.2.2
 RUN pip install "poetry==$POETRY_VERSION"
-RUN python3 -m venv /venv
+RUN python3.9 -m venv /venv
 
 COPY pyproject.toml poetry.lock ./
 
 COPY . .
-RUN . /venv/bin/activate && poetry install
+RUN . /venv/bin/activate ; poetry env use python3.9; poetry install
 #########
 # FINAL # separated to reduce final size
 #########
@@ -34,9 +36,11 @@ FROM ubuntu:22.04
 # create the app user
 RUN addgroup --system app && adduser --system app --ingroup app
 RUN apt-get update # && apt install postgresql-dev gcc python3-dev
-RUN apt-get install -y python3.10 python3.10-dev
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN apt-get install -y python3.9 python3.9-dev
 RUN apt-get install -y python3-pip
-RUN apt-get install -y python3.10-venv
+RUN apt-get install -y python3.9-venv
 RUN apt-get install -y build-essential
 RUN apt-get install -y  libc6-dev libc6 libssl-dev zlib1g-dev curl gcc-9
 RUN apt-get install -y libc-bin
