--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ decorator = "^5.1.1"
 dill = "^0.3.6"
 idna = "^3.4"
 imbalanced-learn = "^0.9.1"
+joblib = "^1.2.0"
 jupyter = "^1.0.0"
 numpy = "^1.23.5"
 pandas = "^1.5.2"
